update survey of V-SLAM

--- a/slam综述/基于单目视觉的同时定位与地图构建方法综述.md
+++ b/slam综述/基于单目视觉的同时定位与地图构建方法综述.md
@@ -69,3 +69,46 @@ $$argmin_{\xi_1,...,\xi_m}\sum_{(\xi_{ij},\sum _ {ij})}(\xi_{ij}\circ\xi_i^{-1}\
   * PTAM 扩展场景时也要求新加入的关键帧提供足够的视差, 导致场景往往难以扩展. ORB-SLAM 采用一种更鲁棒的关键帧和三维点的选择机制——先用宽松的判断条件尽可能及时地加入新的关键帧和三维点, 以保证后续帧的鲁棒跟踪; 再用严格的判断条件删除冗余的关键帧和不稳定的三维点, 以保证 BA 的效率和精度。
 
 ### C.基于直接跟踪的V-SLAM
+* 基于滤波器和基于关键帧 BA 的 V-SLAM 通常要在图像中提取并匹配特征点, 因此对环 境特征的丰富程度和图像质量(如模糊程度、图像噪声等)十分敏感. 相比之下, 直接跟踪法不依赖于特征点的提取和匹配, 而是直接通过比较像素颜色来求解相机运动, 因此通常在特征缺失、图像模糊等情况下有更好的鲁棒性。
+* DTAM 是2011年提出的单目 V-SLAM 系统, 其最显著的特点是能实时恢复场景三维模型。基于三维模型, DTAM 既能允许 AR 应用中的虚拟物体与场景发生物理碰撞, 又能保证在特征缺失、图像模糊等情况下稳定地直接跟踪。具体来说, DTAM 预测一个与当前帧相机方位$C_t$十分接近的虚拟相机$C_v$, 在$C_v$下绘制场景三维模型, 由此求解$C_v$和$C_t$间的相对运动$\xi_{tv}$
+$$argmin_{\xi_{tv}}\sum_{x\in \Omega_v}\left \| r(x,D_v(x),\xi_{tv}) \right \|_2^2 \tag{11}$$
+  其中，$r(\bullet)$为颜色残差，
+$$r(x,D_v(x),\xi_{tv}) = I_v(x)-I_t(\omega(x,D_v(x),\xi_{tv})) \tag{12}$$
+  $I_v$和$D_v$分别为对三维模型在$C_v$下绘制得到的亮度图和深度图，$\Omega _v$为亮度和深度有效像素的集合，函数$\omega(x,D_v(x),\xi_{tv})$将虚拟帧v中的像素x投影至当前帧t中。
+  为恢复场景三维模型, 后台需要持续恢复参考帧 r 的深度图$D_r$。这里选用的是逆深度方式表达深度。DTAM 将解空间离散为$M\times N\times S$的三维网格, 其中$M\times N$为图像分辨率，S为逆深度分辨率。DTAM选择参考帧r周围的后续帧$m\in N(r)$，对r中每个图像坐标为x、逆深度为$d=D_r(x)$的体素计算匹配代价
+  $$C(x,d) = \frac 1{|N(r)|}\sum_{m\in N(r)} \left \| r(x,d,\xi_{mr}) \right \|_1  \tag{13}$$
+  仅通过$argmin_d C(x,d)$恢复的深度图在无纹理区域存在歧义，因此，DTAM加入正则项
+  $$R(x,d) = g(x)\left \| \nabla D_r(x) \right \|_\epsilon \tag{14}$$
+  其中，$g(x)$为平滑权重，用于降低物体边界处的平滑程度
+  $$g(x) = e^{-\alpha \left \| \nabla I_r(x) \right \|_2^\beta} \tag{15}$$
+  $\left \| x \right \|_\epsilon$为Huber范数，
+  $$\tag{16}$$
+  用于保留深度不连续区域。DTAM的能量函数为
+  $$\tag{17}$$
+  采用全变差技术求解。
+  基于直接跟踪的 DTAM 对特征缺失、图像模糊有很好的鲁棒性, 但由于 DTAM 为每个像素都恢复稠密的深度图, 并且采用全局优化, 因此计算量很大, 即使采用 GPU 加速, 模型的扩展效率仍然较低。
+* 与DTAM相比,LSD-SLAM仅恢复半稠密深度图, 且每个像素深度独立计算, 因此能达到很高的计算效率。LSD-SLAM 采用关键帧表达场景, 每个关键帧k包含图像$I_k$、逆深度图$D_k$和逆深度的方差$V_k$. 系统假设每个像素 x 的逆深度值服从高斯分布$N(D_k(x),V_k(x))$。LSD-SLAM 的前台线程采用直接跟踪法恢复当前帧 t 与关键帧 k 之间相对运动$\xi_{tk}$, 即求解优化式
+$$\tag{18}$$
+其中，$\Omega_k$是深度有效像素的集合；$\sigma^2(x,\xi)$为$r(\bullet)$的方差，用于减小深度误差对结果的影响，
+$$\tag{19}$$
+$\left \| \bullet \right \|_\delta$为阈值为$\delta$的Huber范数，用于缓解Outliers对结果的影响。LSD-SLAM 的后台线程对关键帧中每个半稠密抽取的像素点 x (梯度显著区域), 在$I_t$中沿极线搜索$I_k(x)$的对应点, 得到新的逆深度观测值$d_x$及其方差$\sigma_x^2$, 采用EKF更新$D_k$和$V_k$
+$$\tag{20}$$
+与 ORB-SLAM 类似, LSD-SLAM 也采用方位图优化, 因此能闭合循环回路和处理大尺度场景。系统为每个新加入的关键帧$k_i$选取距离最近的以及图像内容最相似的已有关键帧集合{$k_j$}, 采用直接跟踪法求解所有$(k_i,k_j)$间的相似变换$\xi_{ij}$及其协方差$\sum _{ij}$构造方位图并求解目标函数(10).
+### D.分析和比较
+* 定位精度。以 MonoSLAM 为代表的基于滤波器的 V-SLAM 由于容易在变量未精确时就进行消元,于是误差不断累积到下一帧, 因此精度劣于以PTAM为代表的基于关键帧 BA 的 V-SLAM。 MSCKF 虽然也基于滤波器, 但由于其推迟消元的机制, 加上融合了 IMU 信息, 通常能达到很高的精度. 比起同样基于关键帧 BA 的 PTAM, RDSLAM 和 ORB-SLAM 由于分别选用了匹配精度更高的 SIFT 特征和 ORB 特征, 而且采用了比 PTAM 更为高效的 BA 实现, 因此定位精度通常比 PTAM 更高; 而且 ORB-SLAM 可以通过闭合回路消除误差累积, 因此在大尺度场景下的定位精度最高. 基于直接跟踪法 DTAM 和 LSD-SLAM 对光照变化和动态干扰较为敏感, 因此精度一般会劣于 ORB-SLAM. LSD-SLAM 的定位误差比 ORB-SLAM 大 5~10 倍.
+* 定位效率。MonoSLAM 的计算复杂度需要$O(n^3)$, 其中 n 为所有三维点个数, 因此定位效率较低. MSCKF 的计算复杂度为$O(nl^3)$, 其中 n 为跟踪轨迹结束于当前帧的三维点个数, l 为系统维护的局部帧数. MSCKF 的定位效率和精度之间存在权衡, 通常 l 越大精度越高, 但效率就越低, 反之亦然. PTAM 和 ORB-SLAM 的前台线程只需优化当前帧方位, 定位效率最高. RDSLAM 虽然前台线程的定位方案与 PTAM 和 ORB-SLAM 类似, 但定位效率受限于计算代价较高的 SIFT 特征.基于直接跟踪的 DTAM 和 LSD-SLAM 的定位效率主要取决于选取的图像分辨率, 因此在效率和精度之间也存在权衡, 通常分辨率越高精度越高, 但效率越低, 反之亦然。
+* 场景尺度。MonoSLAM由于其$O(n^3)$的计算复杂度, 因此只适用于几百个点的小场景. MSCKF 只维护局部地图, 对场景尺度没有限制. PTAM 和 RDSLAM的场景尺度主要限制于全局 BA 和特征点匹配效率: PTAM 通常只能实时处理几千个点的中等尺度场景; RDSLAM 由于 BA 的效率更高, 而且其基于 KDTree 的匹配策略也比 PTAM 将三维点投影到当前帧搜索的策略更高效, 因此能处理的尺度更大一些, 可以实时处理几万个点的场景规模. ORB-SLAM 和 LSD-SLAM 用高效的方位图优化替代全局 BA, 适用于较大尺度的场景. DTAM 由于需要维护和渲染整个场景的三维模型, 也只适用于小场景。
+* 特征缺失鲁棒性。特征缺失(比如场景缺乏丰富的纹理或者由于图像模糊导致)对几乎所有 V-SLAM 都有较大影响. 其中, 只有基于直接跟踪的 DTAM 和 LSD-SLAM 能通过利用稠密或半稠密的图像信息缓解特征依赖, 但也不能完全消除. MSCKF 属于 VI-SLAM, 即使出现短时间特征缺失的情况, 也可利用 IMU 数据来跟踪方位, 因此对临时特征缺失的鲁棒性最好。
+* 快速运动和扩展效率. 能否处理相机快速运动, 一方面依赖于所采用的匹配方法在大运动情况下的鲁棒性, 另一方面也依赖于场景地图的扩展效率. MonoSLAM 采用 EKF 的方式预测特征点的位置并进行主动搜索, 这对于太大的运动会失败. PTAM 采用主要依靠运动预测的方式将关键帧上三维位置已知的特征点投影到当前帧来, 并通过基于金字塔模型的匹配来增加鲁棒性, 对快速运动的鲁棒性会比 MonoSLAM 高. 但扩展场景需要对三维位置未知的特征点进行暴力搜索特征匹配, 该步骤十分耗时, 只能放到后台进行, 因此对于快速场景扩展的效率会比 MonoSLAM 差. 与 PTAM 类似, DTAM 也先采用基于金字塔模型的整张图像对齐方法估计一个大概的相机姿态, 然后将整个模型绘制到这个视点下与当前帧图像进行进一步的对齐优化. MSCKF, RDSLAM 和 ORB- SLAM均采用对视角变化具有不变性的特征描述量 (MSCKF 和 RDSLAM 选用 SIFT 特征, ORB-SLAM 选 用 ORB 特征), 允许高效的全局特征匹配(RDSLAM 采用 KDTree, ORB-SLAM 采用词袋模型), 因此对于大运动情况具有较好的鲁棒性(RDSLAM 实际上每帧都进行全局重定位)。LSD-SLAM 假设相机平缓运动, 采用前一帧的相机姿态作初始化进行直接的图像对齐, 因此对快速运动最敏感. 类似于 PTAM, RDSLAM 和 ORB-SLAM 均在后台线程扩展场景, 但由于它们高效的特征匹配, RDSLAM 和 ORB-SLAM 扩展场景的效率优于PTAM。MSCKF因为利用了 IMU 信息, 即使匹配点还没有三角化也能扩展场景, 因此扩展场景的效率最高. LSD- SLAM 和 DTAM 由于需要恢复半稠密或稠密的深度图, 一方面计算量较大, 另一方面对于新扩展部分的深度往往需要处理至少若干帧才能收敛, 因此扩展效率最差。
+* 重定位能力. 实际跟踪的时候难免遇到失败的情况, 这时需要用重定位技术从失败状态中恢复. MonoSLAM, MSCKF不支持重定位. PTAM 是通过维护关键帧的缩略图, 跟丢的时候将当前帧与已有关键帧的缩略图进行比较, 找到最匹配的关键帧恢复初始的方位后, 再把地图中的三维点投影到当前帧来进行特征匹配和方位优化来实现重定位. 该方法的缺点是, 如果当前帧跟已有的关键帧的视角不够接近, 就不容易重定位成功. RDSLAM, ORB-SLAM 和 LSD-SLAM 都是采用对视角变化具有不变性的特征描述量并结合高效的检索方法(RDSLAM 采用 KDTree, ORB-SLAM 采用词袋模型, LSD-SLAM 采用 FAB-MAP 方法)来实现重定位, 即使当前帧与关键帧有较大的视角差异也能重定位, 鲁棒性会比 PTAM 的基于缩小模糊图匹配方式更好。
+* 近似纯旋转扩展鲁棒性. 在实际使用中, 相机可能会以近似纯旋转的方式转向拍摄旁边的场景内容. MonoSLAM 因为每帧同时优化三维点和相机方位, 所以对近似纯旋转有很好的鲁棒性. MSCKF 也类似, 不同的是, MSCKF 仅当跟踪轨迹结束时才三角化出三维点, 并且立即消元, 而且用了 IMU 信息, 因此对近似纯旋转最鲁棒. PTAM 和 RDSLAM 在近似纯旋转扩展场景时容易因为视差不够无法三角化新的三维点, 导致无法加入新的关键帧, 从而造成后续帧跟踪丢失, 鲁棒性较差. ORB-SLAM, DTAM 和 LSD-SLAM 对纯旋转扩展的鲁棒性很大程度取决于后台场景地图的扩展及优化的效率, 能否及时得到高质量的三维地图是后续帧能否稳定跟踪的关键. 因为 ORB-SLAM 不需要恢复稠密深度, 计算效率高, 所以在近似纯旋转扩展情况下的鲁棒性要比 DTAM 和 LSD-SLAM 更好。
+* 场景变化的鲁棒性. Mono-SLAM, MSCKF, PTAM, ORB-SLAM, DTAM, LSD-SLAM 等系统都假设场景是静止不变的, 如果场景变化很大就会跟踪失败. 不过这些系统都采用了 RANSAC或鲁棒函数等策略提高鲁棒性，如果场景中动态物体上的匹配点数相对于静态匹配点数的比例不是很大, 一般能当作 Outliers 剔除掉; 但是如果场景在不断改变, 而且大部分区域都发生了变化, 那么这些系统就会失败. MSCKF 因为使用了 IMU 信息, 理论上对动态变化的鲁棒性应该会好些. RDSLAM 由于会在线地检测场景的变化, 识别出改变的三维点并更新关键帧, 而且其提出的基于时序先验的自适应 RANSAC 方法也能很好地处理误匹配点, 因此能很好地处理场景逐渐改变和动态物体干扰比较多的情况, 对场景变化的鲁棒性最高. 当然, 如果整个场景在很短的时间内完全发生改变, 那么 RDSLAM 也无法处理。
+* 回路闭合能力. MonoSLAM 没有显式的回路检测步骤, 但如果系统状态一致(即协方差真实反映误差), 回路发生时仍有可能在当前帧的投影概率椭圆内搜索到回路上点的匹配点. RDSLAM 虽然没有显式的回路检测, 但是由于采用 SIFT 特征与地图里的三维点进行全局匹配, 回路发生时理论上可以检测出特征点的匹配关系并通过 BA 消除误差累积来闭合; 如果误差累积过大, 匹配点有可能会被当作 Outliers 剔除掉, 从而造成无法有效的闭合. MSCKF, PTAM 和 DTAM 均无回路闭合机制. ORB-SLAM 和 LSD-SLAM 显式检测回路构建 并优化方位图, 回路闭合能力最强。
+
+## 3.近年研究热点与发展趋势
+### A.缓解特征依赖
+* V-SLAM 最大的局限在于过于依赖场景特征. 基于直接跟踪的方法通过直接对比像素颜色, 避免了对特征缺失/图像模糊非常敏感的特征提取和匹配过程, 从而很大程度上缓解了特征依赖. 然而, 稠密或半稠密的直接跟踪会引入很大的计算量, 若要运行在计算性能较低的移动设备上, 就需要将图像降采样至很小的分辨率, 那么必然会降低跟踪精度。半直接视觉测量, 只对稀疏的特征点进行直接跟踪, 能达到很高的效率.
+* V-SLAM 对场景特征的依赖, 本质上是由于使用了过于底层的局部特征(点特征), 如果能利用边缘、平面等更为高层的图像信息, 也能有效地缓解特征依赖。 2008 年就有人提出使用边特征来对抗图像模糊。LSD-SLAM 实际上也是隐式地利用了图像边缘信息，大部分的半稠密区域均位于物体边缘。Concha 等提出使用面特征将图像中颜色一致的区域近似为平面称之为超 像素. Concha 等分别将超像素集成进 PTAM 和 LSD-SLAM 中, 提高原系统鲁棒性. 此外, 更为高层的空间布局对 V-SLAM 来说也是非常有价值的图像信息. 通常室内房间可以近似一个三维盒子, 通过恢复房间盒子的三维参数辅助相机跟踪或恢复高质量三维地图。
+
+### B.稠密三维重建
+* 早期的 V-SLAM 大多只能实时重建出非常稀疏的三维点云. 若要获得更为稠密的三维信息, 往往需要离线处理, 或是将实时数据传到性能强大的服务器进行计算. 微软公司于 2010 年推出 RGB-D 摄像头 Kinect, 能实时捕获彩色图像及深度图. 深度图不仅能辅助相机跟踪, 还能提供稠密的场景三维信息. Newcombe 等率先提出基于 RGB-D 的稠密 SLAM 系统 KinectFusion. KinectFusion 使用 TSDF表达三维场景, 算法在重建的三维物体上叠加一个均匀的三维网格, 每个网格体素存储其中心到最近的三维物体表面间的距离. 基于 TSDF 绘制某一视角下的深度图, 可使用 Marching Cube 算法抽取 TSDF 为 0 的三维物体表面并在该视角下进行深度绘制, 或直接进行光线投射至 TSDF 为0的深度. 为跟踪相机运动,KinectFusion绘制全局模型在上一帧视角下的深度图, 并使用 ICP 算法与当前帧深度图对齐, 求解 2 帧间相对运动. 恢复的相机方位将当前帧深度图注册至全局坐标下, 与全局模型融合, 更新 TSDF.
