end survey of V-SLAM

--- a/slam综述/基于单目视觉的同时定位与地图构建方法综述.md
+++ b/slam综述/基于单目视觉的同时定位与地图构建方法综述.md
@@ -5,8 +5,8 @@
 
 
 # 速读概览：
-## 1.主要内容？ 
-单目SLAM综述。
+## 主要内容
+V-SLAM综述
 
 
 ## 0.摘要
@@ -15,11 +15,11 @@
 
 ## 0.5.导入部分
 * GPS无法在室内及遮挡严重的室外环境中使用，且定位精度较低；高精度的惯导系统成本太高且难以民用；基于无线信号的定位方法需要事先布置使用场景等。而基于视觉的SLAM硬件成本低廉、小场景范围内精度较高、无需预先布置场景等，逐渐成为常采用的定位方案。
-* SLAM最早源于机器人领域，目标是在一个未知的环境中实时重建环境的三维结构并同时对机器人进行定位。在计算机视觉领域，与之类似的技术是运动推断结构（SFM）。
+* SLAM最早源于机器人领域，目标是**在一个未知的环境中实时重建环境的三维结构并同时对机器人进行定位**。在计算机视觉领域，与之类似的技术是运动推断结构（SFM）。
 
 
 ## 1.V-SLAM的基本原理
-* V-SLAM技术可以根据拍摄的视频信息推断出摄像头在未知环境中的方位, 并同时构建环境 地图, 其基本原理为多视图几何原理。
+* V-SLAM技术可以**根据拍摄的视频信息推断出摄像头在未知环境中的方位, 并同时构建环境地图**, 其基本原理为多视图几何原理。
 * V-SLAM的目标为同时恢复出每帧图像对应的相机运动参数$C_1...C_m$, 及场景三维结构$X_1...X_n$。每个相机运动参数$C_i$包含了相机的位置和朝向信息, 通常表达为一个3×3的旋转矩阵$R_i$和一个三维位置变量$P_i$。$R_i$,$P_i$将一个世界坐
 标系下的三维点$X_j$变换至$C_i$的局部坐标系
 $$(X_{ij},Y_{ij},Z_{ij})^T = R_i(X_j)-p_i \tag{1}$$
@@ -82,17 +82,25 @@ $$r(x,D_v(x),\xi_{tv}) = I_v(x)-I_t(\omega(x,D_v(x),\xi_{tv})) \tag{12}$$
   其中，$g(x)$为平滑权重，用于降低物体边界处的平滑程度
   $$g(x) = e^{-\alpha \left \| \nabla I_r(x) \right \|_2^\beta} \tag{15}$$
   $\left \| x \right \|_\epsilon$为Huber范数，
-  $$\tag{16}$$
+  $$\left \| x \right \|_\epsilon = \begin{cases}
+\left \|x \right \|_2^2/2\epsilon, &if\ \left \|x \right \|_2\ \le\ \epsilon\\
+\left \|x \right \|_1-\epsilon /2, &otherwise
+\end{cases}  \tag{16}$$
   用于保留深度不连续区域。DTAM的能量函数为
-  $$\tag{17}$$
+  $$argmin_{D_r}\int (R(x,D_r(x))+\lambda C(x,D_r(x)))dx \tag{17}$$
   采用全变差技术求解。
   基于直接跟踪的 DTAM 对特征缺失、图像模糊有很好的鲁棒性, 但由于 DTAM 为每个像素都恢复稠密的深度图, 并且采用全局优化, 因此计算量很大, 即使采用 GPU 加速, 模型的扩展效率仍然较低。
 * 与DTAM相比,LSD-SLAM仅恢复半稠密深度图, 且每个像素深度独立计算, 因此能达到很高的计算效率。LSD-SLAM 采用关键帧表达场景, 每个关键帧k包含图像$I_k$、逆深度图$D_k$和逆深度的方差$V_k$. 系统假设每个像素 x 的逆深度值服从高斯分布$N(D_k(x),V_k(x))$。LSD-SLAM 的前台线程采用直接跟踪法恢复当前帧 t 与关键帧 k 之间相对运动$\xi_{tk}$, 即求解优化式
-$$\tag{18}$$
+$$argmin_{\xi}\sum_{x\in \Omega_k} \left \| \frac{r^2(x,D_k(x),\xi_{tk})}{\sigma_r^2(x,D_k(x),\xi_{tk})} \right \|_{\delta} \tag{18}$$
 其中，$\Omega_k$是深度有效像素的集合；$\sigma^2(x,\xi)$为$r(\bullet)$的方差，用于减小深度误差对结果的影响，
-$$\tag{19}$$
+$$\sigma_r^2(x,D_k(x),\xi_{tk}) = 2\sigma_I^2 + (\frac{\partial_r(x,D_k(x),\xi_{tk})}{\partial D_k(x)})^2V_k(x) \tag{19}$$
 $\left \| \bullet \right \|_\delta$为阈值为$\delta$的Huber范数，用于缓解Outliers对结果的影响。LSD-SLAM 的后台线程对关键帧中每个半稠密抽取的像素点 x (梯度显著区域), 在$I_t$中沿极线搜索$I_k(x)$的对应点, 得到新的逆深度观测值$d_x$及其方差$\sigma_x^2$, 采用EKF更新$D_k$和$V_k$
-$$\tag{20}$$
+$$\left \{ 
+\begin{array}{c}
+D_k(x) \leftarrow \frac{V_k(x)d_x+\sigma_x^2D(x)}{V_k(x)+\sigma_x^2}\\ 
+V_k(x) \leftarrow \frac{V_k(x)\sigma_x^2}{V_k(x)+\sigma_x^2}
+\end{array}
+\right. \tag{20}$$
 与 ORB-SLAM 类似, LSD-SLAM 也采用方位图优化, 因此能闭合循环回路和处理大尺度场景。系统为每个新加入的关键帧$k_i$选取距离最近的以及图像内容最相似的已有关键帧集合{$k_j$}, 采用直接跟踪法求解所有$(k_i,k_j)$间的相似变换$\xi_{ij}$及其协方差$\sum _{ij}$构造方位图并求解目标函数(10).
 ### D.分析和比较
 * 定位精度。以 MonoSLAM 为代表的基于滤波器的 V-SLAM 由于容易在变量未精确时就进行消元,于是误差不断累积到下一帧, 因此精度劣于以PTAM为代表的基于关键帧 BA 的 V-SLAM。 MSCKF 虽然也基于滤波器, 但由于其推迟消元的机制, 加上融合了 IMU 信息, 通常能达到很高的精度. 比起同样基于关键帧 BA 的 PTAM, RDSLAM 和 ORB-SLAM 由于分别选用了匹配精度更高的 SIFT 特征和 ORB 特征, 而且采用了比 PTAM 更为高效的 BA 实现, 因此定位精度通常比 PTAM 更高; 而且 ORB-SLAM 可以通过闭合回路消除误差累积, 因此在大尺度场景下的定位精度最高. 基于直接跟踪法 DTAM 和 LSD-SLAM 对光照变化和动态干扰较为敏感, 因此精度一般会劣于 ORB-SLAM. LSD-SLAM 的定位误差比 ORB-SLAM 大 5~10 倍.
@@ -111,4 +119,24 @@ $$\tag{20}$$
 * V-SLAM 对场景特征的依赖, 本质上是由于使用了过于底层的局部特征(点特征), 如果能利用边缘、平面等更为高层的图像信息, 也能有效地缓解特征依赖。 2008 年就有人提出使用边特征来对抗图像模糊。LSD-SLAM 实际上也是隐式地利用了图像边缘信息，大部分的半稠密区域均位于物体边缘。Concha 等提出使用面特征将图像中颜色一致的区域近似为平面称之为超 像素. Concha 等分别将超像素集成进 PTAM 和 LSD-SLAM 中, 提高原系统鲁棒性. 此外, 更为高层的空间布局对 V-SLAM 来说也是非常有价值的图像信息. 通常室内房间可以近似一个三维盒子, 通过恢复房间盒子的三维参数辅助相机跟踪或恢复高质量三维地图。
 
 ### B.稠密三维重建
-* 早期的 V-SLAM 大多只能实时重建出非常稀疏的三维点云. 若要获得更为稠密的三维信息, 往往需要离线处理, 或是将实时数据传到性能强大的服务器进行计算. 微软公司于 2010 年推出 RGB-D 摄像头 Kinect, 能实时捕获彩色图像及深度图. 深度图不仅能辅助相机跟踪, 还能提供稠密的场景三维信息. Newcombe 等率先提出基于 RGB-D 的稠密 SLAM 系统 KinectFusion. KinectFusion 使用 TSDF表达三维场景, 算法在重建的三维物体上叠加一个均匀的三维网格, 每个网格体素存储其中心到最近的三维物体表面间的距离. 基于 TSDF 绘制某一视角下的深度图, 可使用 Marching Cube 算法抽取 TSDF 为 0 的三维物体表面并在该视角下进行深度绘制, 或直接进行光线投射至 TSDF 为0的深度. 为跟踪相机运动,KinectFusion绘制全局模型在上一帧视角下的深度图, 并使用 ICP 算法与当前帧深度图对齐, 求解 2 帧间相对运动. 恢复的相机方位将当前帧深度图注册至全局坐标下, 与全局模型融合, 更新 TSDF.
+* 早期的 V-SLAM 大多只能实时重建出非常稀疏的三维点云. 若要获得更为稠密的三维信息, 往往需要离线处理, 或是将实时数据传到性能强大的服务器进行计算. 微软公司于 2010 年推出 RGB-D 摄像头 Kinect, 能实时捕获彩色图像及深度图. 深度图不仅能辅助相机跟踪, 还能提供稠密的场景三维信息. Newcombe 等率先提出基于 RGB-D 的稠密 SLAM 系统 KinectFusion. KinectFusion 使用 TSDF表达三维场景, 算法在重建的三维物体上叠加一个均匀的三维网格, 每个网格体素存储其中心到最近的三维物体表面间的距离. 基于 TSDF 绘制某一视角下的深度图, 可使用 Marching Cube 算法抽取 TSDF 为 0 的三维物体表面并在该视角下进行深度绘制, 或直接进行光线投射至 TSDF 为0的深度. 为跟踪相机运动,KinectFusion绘制全局模型在上一帧视角下的深度图, 并使用 ICP 算法与当前帧深度图对齐, 求解 2 帧间相对运动. 恢复的相机方位将当前帧深度图注册至全局坐标下, 与全局模型融合, 更新 TSDF。
+* KinectFusion 最明显的局限性如下: 
+  * 预设的三维网格限制了场景尺度; 
+  * 基于 ICP 的相机跟踪严重依赖于场景几何特征的丰富程度; 
+  * 循环回路无法闭合. 
+  为解决上述问题: 文献[58]提出让三维网格随相机运动, 移出三维网格的区域不参与计算, 从而突破了场景尺度的限制; 文献[59]融合了ICP, FOVIS和 RGB-D 3 种相机跟踪方法, 缓解跟踪对几何特征的依赖, 减小误差累积; 文献[62]采用 DBoW检测循环回路从而构建方位图, 并采用文献[63]提出的方法形变方位图以闭合循环回路, 重建的三维模型也相应形变; 文献[64]提出使用面元表达场景, 面元包含了三维点的位置、法向等信息, 形变直接作用于面元上而非通过方位图间接作用于三维模型, 从而获得更高的模型精度。
+* 基于单目摄像头的稠密三维重建的难点在于需要实时恢复稠密的深度图, 这一过程通常都需要引入很大的计算量, 关键是如何权衡重建精度和计算效率。通常, 算法选择 2 帧具有视差的图像$(I,I')$，通过立体匹配恢复粗略的深度图。一个标准的方法是为 I 中的每个像素 x 在$(I')$中对应的极线上搜索最相似的像素$(x')$, 通常在选择局部图像块采用 NCC作为相似性度量。为加速匹配过程, 文献[67-68]对图像建造高斯金字塔, 先在低分辨率图像立体匹配, 用于限制高分辨率图像的搜索范围. MonoFusion采用 PatchMatch 技术为每个像素随机生成一个深度值, 再利用相邻像素深度值相近的特点将可靠的深度值向周围像素传递。上述局部匹配在缺少纹理或重复纹理的区域存在歧义。DTAM 和 REMODE 引入正则项对深度图进行全局优化, 缓解匹配歧义。REMODE 还采用深度滤波方法, 将每个像素的深度及 其属于 Inlier 的概率显式表达为一个混合概率模型, 不断融合每帧的深度测量更新此概率模型的参数。Kolev 等采用面元表达, 通过对深度图对应像素的深度值、法向和可见性进行一致性判断, 剔除Outliers 或更新面元参数. MonoFusion, MobileFusion
+和 Schöps 等提出的基于 Project Tango 的三维重建方法都采用 TSDF来融合深度图、剔除Outliers.
+* 上述方法虽然都能实时重建出稠密的三维信息, 但大多依赖于 GPU 并行计算。
+
+### C.多传感器融合
+* 基于单一传感器的定位方案不可避免地都有各自的固有局限: 仅基于图像的 V-SLAM 依赖场景纹理特征; 仅基于 IMU 的定位通常有严重的误差累积; 仅基于深度的 SLAM 依赖于场景几何特征, 且设备获取深度的精度和范围受限于设备的成本和功耗。只有将不同传感器数据融合起来, 才能互相取长补短, 达到最高的精度和鲁棒性。如今大多数移动设备都配有单目摄像头和 IMU, 有的甚至配有双目、鱼眼或深度摄像头。
+* 融合多传感器数据本质上就是一个非线性优化问题, 每种类型的传感器信息作为能量函数中的一项。难点在于运动参数需要实时地恢复出来, 而变量个数会随着运行时间不断增加. 比如在 t 时刻, 待优化的相机变量为$C={C_1,C_2,...,C_t}$, 那么在 30 帧/s 的应用中, 每秒会增加 30 组待优化的运动参数, 很快便会超出计算设备的极限。
+* 一个常见的简化方法为设置一个滑动窗口, 窗口中包含邻近的l帧运动参数$C_{t-l+1...C_t}$, 每次只优化这l组运动参数和相应的三维结构. 移出窗口的变量采用消元法, 得到关于剩余窗口内变量的先验约束, 加入后续的优化中。基于滤波器的 SLAM 都属于这种类型(对于标准的滤波器来说$l=1$)。很多研究工作试图提高基于滤波器的精度。MSCKF 通过加大滑动窗口大小 l 缓解由尚未精确的状态被消元而产生的误差累积。Li 等提出了改进版本 MSCKF 2.0. 通过对 MSCKF 进行可见性分析后发现, 如果线性化点不断变化, 会在原系统的不可见的艏摇(Yaw, 即绕重力方向的旋转)方向上错误地产生信息, 最终导致误差累积。于是, MSCKF 2.0 采用 First-Estimate Jacobian固定线性化点, 消除艏摇方向上的错误信息, 提高估计的精度。
+* 另一类方法采用迭代优化。EKF 可以看成只进行一次迭代, 由于 SLAM 问题通常非线性, 因此迭代优化通常比 EKF 精度更高, 但显然计算量更大。为简化计算, 可采用预积分技术来避免每次迭代 IMU 数据的重复积分. 文献[79]提出一种增量优化器 iSAM2, 每次只优化当前帧影响到的局部变量，可以极大地减少计算量. 文献[13]提出在滑动窗口同时保留邻近的关键帧和非关键帧, 移出滑动窗口的信息根据对当前帧的影响选择消元或直接丢弃。
+
+### D.其他实际问题
+* 虽然目前 V-SLAM 算法在理想条件下已经能达到很高的精度和计算效率, 但在实际应用中往往无法满足理想条件. 多数单目V-SLAM系统, 尤其是基于关键帧 BA 的单目 V-SLAM 系统, 要求用户以平移的方式运动才能扩展场景。然而对于增强现实的应用来说, 用户容易以接近纯旋转的方式观看虚实融合效果, 从而导致跟踪失败; 用户在观看的时候可能不会非常平缓地运动, 实际使用过程很容易出现快速的移动和突然转动的情况, 而且这种情况下往往伴随着运动模糊, 这对目前的 V-SLAM 系统来说挑战性很大. 如何支持近似纯旋转和快速扩展场景, 提高对运动模糊的容忍能力, 对于提高系统鲁棒性、 改进增强现实应用体验尤为重要。另外, 移动设备上的摄像头往往存在滚动快门现象, 图像中每一行在不同时刻曝光, 即对应不同的相机运动。此外, 对于画面中出现的动态物体, 如果动态物体所占画面区域较大且特征丰富,传统的 RANSAC 方法很容易失败, 需要更鲁棒的误匹配点剔除机制或者利用 IMU 信息来解决歧义。
+
+## 4.结语
+* 随着各种硬件传感器的发展和普及, 目前 SLAM 技术正朝着多传感器融合的方向发展, 试图通过利用各种传感器的优势互补性来达到尽可能高的精度和鲁棒性。
