update graph-based SLAM

--- a/slam综述/基于图优化的同时定位与地图创建综述.md
+++ b/slam综述/基于图优化的同时定位与地图创建综述.md
@@ -19,4 +19,13 @@
 ## 2.基于图优化的SLAM框架
 * 基于图优化的 SLAM 方法最早以基于激光传感器的平面地图创建为例，通过保留所有的观测数据帧以及帧间的空间约束关系，并将约束看作是随机观测，然后采用最大似然方法估计机器人的位姿。这种思想可以通过图的方式形象地表现出来。用图节点表示待求解的机器人位姿，用节点间的边来描述位姿间的空间约束关系，则对位姿序列的估计可以转化为图的优化问题，即通过调整图中节点的位置使其最好地满足边的约束关系。在此基础上提出了高效的环形闭合检测及图构建方法，从而形成了基于图优化的增量式 SLAM 算法框架，其主要包括顺序配准、环形闭合检测以及图优化 3 大部分。其关系参考图1。
 ![avatar](./img/graph-01.png)
-* 
+* 顺序配准主要考虑连续数据帧间的匹配及相对姿态估计问题，而环形闭合检测则主要根据观测数据判断机器人是否处在之前已访问区域。从数据处理的观点来看，两者都是要解决数据关联问题，前者考虑局部数据关系，后者处理全局数据关系。从基于图的表示上看，顺序配准与环形闭合检测都是根据观测信息建立图节点间的约束，即完成图的构建。两者一起被称为 SLAM 前端。
+* 由于观测噪声以及配准误差的存在，通过观测信息配准得到的位姿图往往不具备一致性。图中的边与边之间常常存在“冲突”。若用$T_i$来表示数据帧间的相对变换矩阵且$T_0$, $T_1$,···,$T_n$构成一个闭环的话，从理论上讲，必然存 在$T_0T_1···T_n=I$,其中$I$为单位矩阵。但通过观测信息配准得到的相对变换矩阵通常不满足该理论约束。在基于图的形式化表示中，机器人的位姿被看作是随机变量，位姿间的约束则是与随机变量相关的观测，那么图优化结果则对应于位姿的最大似然估计。图优化部分一般不直接处理观测数据，只是对 SLAM 前端构造的图进行优化。通常又被称为 SLAM 后端。
+
+## 3.帧间配准
+* 帧间配准指根据观测的两帧数据，建立数据间的对应关系并求解帧间的相对变换，从而将原不同坐标系下的观测数据放置在同一坐标系中。由于两帧数据分别表示在对应的传感器坐标系下，所求的相对变换即为传感器的相对位姿。进行帧间配准时，用于校准的帧通常被称为模型帧或参考帧，被校准的帧通常被称为场景帧。
+* 机器人自运动信息的估计是机器人自定位和地图创建的基础。自运动信息可通过编码器、惯量传感器或全球定位系统获得。缺少这些设备或其不可用的情况下，连续帧间的相对运动也可以通过观测信息的配准得到。与轮子里程计相比，基于帧间配准的方法不受地形及运动方式影响，且往往具有更高的估计精度。轮子里程计通常只能完成 3 自由度的运动估计，但 帧间配准的方法可以方便地扩展到 6 自由度。因而，帧间配准方法广泛用于室内外、水下机器人，甚至火星探测器当中。帧间配准还可用于计算空间上相邻而时间上不连续的两帧数据间的相对变换，即构造环形闭合约束。这是对行进中机器人运动累积误差进行矫正的前提条件，对SLAM具有重要意义。以下对空间点配准及图像配准相关技术进行介绍。
+  * 空间点配准。迭代最近点是经典方法。空间点包括 2 维 或 3 维欧氏空间中的点集，这些点可以是通过 2 维或 3 维激光传感器获得，它们表示在以传感器为原点建立起的坐标系中。
+  假设模型数据集与场景数据集分别用$\{p_i\}_1^M$与 $\{q_j\}_1^N$来表示，数据间的相对变换用齐次变换矩阵 T 来表示。标准的迭代最近点方法通过迭代执行以下两个步骤对点集进行配准:
+    * 1.对应关系建立。即通过最近邻原则建立场景数据集与模型数据集之间的对应关系。对应关系可以用映射$\eta(j)$表示，其形式化描述如下：
+    $$\eta_k(j) = \tag{1}$$
