update survey of graph-based slam

--- a/slam综述/基于图优化的同时定位与地图创建综述.md
+++ b/slam综述/基于图优化的同时定位与地图创建综述.md
@@ -28,4 +28,48 @@
   * 空间点配准。迭代最近点是经典方法。空间点包括 2 维 或 3 维欧氏空间中的点集，这些点可以是通过 2 维或 3 维激光传感器获得，它们表示在以传感器为原点建立起的坐标系中。
   假设模型数据集与场景数据集分别用$\{p_i\}_1^M$与 $\{q_j\}_1^N$来表示，数据间的相对变换用齐次变换矩阵 T 来表示。标准的迭代最近点方法通过迭代执行以下两个步骤对点集进行配准:
     * 1.对应关系建立。即通过最近邻原则建立场景数据集与模型数据集之间的对应关系。对应关系可以用映射$\eta(j)$表示，其形式化描述如下：
-    $$\eta_k(j) = \tag{1}$$
+    $$\eta_k(j) = argmin_{i\in {1,...,M}}\left \| T_{k-1}\cdot q_j-p_i \right \| j=1,2,...,N \tag{1}$$
+    其中，$\left \| \cdot \right \|$表示空间点的距离，k为迭代次数。第一次迭代时，即k=1，假定$T_0$已知。求解最近邻的一般方法是逐一比较，由于需要求解N个数据的最近邻，其时间复杂度是O(MN)。K-D树通过树型结构来描述空间点的分布，可被用来加速最近邻点的查找。
+    * 2.相对变换求解。即根据上一步中建立的对应关系，通过改变变换矩阵以使得对应点间的距离的 平方和最小。可形式化描述为
+    $$T_k = argmin_T \sum_{j=1}^N \left \|T \cdot q_j-p_{\eta_k (j)}  \right \|^2 \tag{2}$$
+    其中，$T_k$为本次迭代中要求解的变换矩阵。这一步实际上是要解决已知对应关系情况下相对变换的求解问题，其中较为常用的是基于SVD分解的求法。式 (2) 中使用的点到点间的距离也并非衡量当前配准好坏程度的唯一准则。
+    * 由于迭代最近点使用的是由最近邻原则建立起的近似对应关系，其需要依靠迭代的方式进行渐进的修正。在迭代的过程中，对应关系$\eta$以及相对变换T都会被不断地更新，而且两者相互影响。可以证明，经过若干次迭代后，迭代序列$(\eta_1,T_1),(\eta_2,T_2),...,(\eta_n,T_n)$将收敛到局部最优。因而可以选取收敛后的结果作为问题最终解，即$T^* = T_n$。
+    * 迭代最近点方法一个公认的缺点是对初始值有较大的依赖性。当场景数据集与模型数据集之间相差较远(存在较大的平移或旋转)，并且不能提供有效初始值(这时候会选择设定$T_0 = I$)时，上述方法往往会陷入到非全局最优的局部区域中，并最终导致错误的收敛结果。因而，迭代最近点通常用于场景与模型相差不大或可以提供较为可靠初始值的环境中，主要担当配准细化的任务。
+
+  * 图像配准。图像配准是根据拍摄的图像信息对摄像机的运动状态进行估计，在计算机视觉领域常被称为视觉里程计。基于特征的图像配准过程一般包括特征检测、特征匹配以及运动估计 3 个步骤。
+    * 1.特征检测。特征检测是视觉里程计最为基础又至关重要的一步，所有的后续处理都建立在所提取特征的基础上。对图像进行特征提取，应着重考虑特征的 5 大特性，即重现性、准确性、显著性、鲁棒性以及高效性。一般而言，以上特性的性能越高，对图像的配准越有利。但有些特性在一定程度上可能 存在冲突，如特征的显著性好，其鲁棒性可能就稍差，反之亦然。SIFT具有较好的重现性、准确性及鲁棒性，已成功应用于物体识别、目标跟踪、场景分类以及视觉里程计等计算机视觉领域，具有非常好的实验效果.SURF在 SIFT 基础上采用格子滤波来近似高斯滤波，大大地提高了计算效率，但在鲁棒性上比 SIFT 稍差。CenSurE 是专门图像配准设计的特征，在重现性、准确性以及鲁棒性上与SIFT性能相当，但计算效率却远远高于后者，因而更能满足视觉里程计实时性的需要。
+    * 2.特征匹配。特征匹配是要找出图像特征之间的对应关系。有两种不同的思路:一是只对一帧图像进行特征提取，并依靠跟踪技术在另一帧图像中找到其对应点，这通常只需要在检测特征周围进行局部的检索; 二是分别对两帧图像进行特征检测，然后依据特征的相似性建立起对应关系。我们将其分别称为特征跟踪与特征识别。前者只作局部搜索，速度快、稳定性好(较少出现匹配不一致的情况)，缺陷是只能用于两帧图像变化相对较小的情况;后者对每个特征作全局的查找，对帧间变化较大的情况具有较好的适应性，但效率较低，且匹配不一致的情况时有发生，可以通过距离比测试只选择没有歧义的匹配，或者利用几何约束关系剔除错误的匹配。
+    * 3.运动估计。特征的位置信息可以直接使用图像坐标来表示，也可以通过其它方式获取特征在3维空间中的坐标，将其描述在 3 维物理空间中。受特征描述方式的影响，匹配关系有 3 种不同的表示方式，分别为2D到2D、3D到3D以及3D到2D。
+      * 1）2D到2D。2D到2D的匹配关系描述中，特征的位置用图像坐标来表示。经校准的两帧图像$I_{k-1}$与$I_k$间的几何关系可以通过本质矩阵来描述。借助于极线约束，本质矩阵可以从 2D 到 2D 的对应关系中求得。求解本质矩阵的对应关系的数目至少为5组。
+      * 2）3D到3D。当特征及其对应关系直接描述在 3 维空间中时，变换关系的求解与空间点配准方法相似。但通过特征匹配建立的对应关系是确定的，因而不需要进行迭代修正。评价的标准是匹配点间距离的平方和。
+      * 3）3D到2D。3D到2D的匹配表示描述3维特征及其在图像上投影之间的对应关系。通常采用最小化重投影误差的方法来计算帧间的相对变换。假定已建好对应关系 $\{(q_i,u_i)\}$，其中$q_i$表示特征点在 3 维空间中的位置，$u_i$表示其在图像上投影的坐标，变换矩阵求解如下:
+      $$T^* = argmin_T \sum_i \left \| f(q_i;T)-u_i \right \|^2 \tag{3}$$
+      f是投影函数，这就是n点透视问题。3组对应关系是求解该问题的最小规模。采用 3D 到 2D 匹配关系并通过最小化重投影误差的方法所取得的效果要比采用 3D 到 3D 匹配关系并直接最小化空间距离的方法得到的效果更好。
+
+## 4.环形闭环检测
+* 环形闭合检测是指根据传感器信息判断机器人当前是否处在之前已经访问过的某个区域，或机器人当前所处的位置在创建的地图中是否已有相应的描述。正确的闭环信息可以用于修正里程计误差，从而得到信息一致的地图；错误的闭环信息不仅会对后续图优化处理造成干扰，甚至可能完全毁坏已有的地图创建结果。
+### 4.1 存在的问题
+* 环形闭合检测的解决难点：
+  * 1.感知歧义。相似的观测不一定来自相同的场景，从而引起错误的环形闭合判断。一方面传感器只能获得环境的部分信息，观测数据可分辨性有限;另一方面，无论是在室内还是在室外环境中，都有大量相似的事物存在，如相似的桌子、椅子、墙 壁、树木、建筑等，加剧了判断的难度。
+  * 2.数据规模大。在进行环形闭合检测时，需要将当前的观测数据与之前已有的观测数据作比较，以计算它们之间的相似性或对它们出自同一地点的概率进行估计。要处理的数据随运行时间或访问过的地点的增加而不断增长，要求能处理的规模达成千上万帧。
+  * 3.评价要求高。环形闭合检测可以增加新的约束，从而减少甚至是消除增量式估计中引起的累积误差。但错误的环形闭合不仅会对结果的精度产生影响甚至可能导致优化时无法收敛或收敛到错误的结果。判断的准确性对环形闭合检测极其关键。常用于评价环形闭合检测性能的一个指标是准确率–召回率曲线。准确率描述了正确检测出来的闭环占总检测闭环的百分比，召回率则描述了正确检测出来的闭环占所有真实闭环的百分比。准确率要非常高，要求接近 100%，同时召回率也不能太低，否则无法通过闭环信息对运动轨迹进行有效的纠正。
+### 4.2 环形闭合检测技术
+* 目前，基于视觉信息的环形闭合检测最为成功，已广泛应用在各式 SLAM 系统中。本节的介绍以基于视觉的环形闭合检测为主.分场景表示、假设产生以及假设验证 3 个方面对环形闭合检测的相关技术进行阐述。
+#### 4.2.1 场景表示
+* 1.基于特征的表示。场景表示最为直接简单的方法是利用从传感器数据上提取的特征进行描述，每一帧数据上的特征构成一个场景。特征可分为全局特征与局部特征。Sünderhauf 等计算图像的BRIEF-Gist描述子作为场景的描述，Liu 等采用图像的 Gabor-Gist 描述子，并通过 PCA(主元分析)降维以提高计算效率及节省存储空间。Newman等先通过信息熵检测图像中的显著区域并提取位于区域内的稳定特征(如MSER)，然后利用提取的特征来构建场景数据库。Zhang则利用不同尺度下特征匹配重现性的差异对特征进行选择，提高了场景的可分辨性。Steder也采用局部特征的表示方法，并将所有的特征视为高维空间中的点，通过 K-D 树组织在一起，提高了查询效率。与全局特征相比，局部特征对部分可见、遮挡情况下的辨识具有更好的适应性和鲁棒性，更有利于减少感知歧义，增强判断的可靠性，缺点是通常需要存储并处理更多的数据。
+* 2.基于词袋的表示。词袋表示的主要思想是将从图像中提取的局部特征进行聚类, 将连续变化的特征转变为离散化的“词”，然后采用词的统计直方图对场景进行描述。借鉴了文本信息检索中词袋的思想，在CV领域又常被称为视觉词袋方法。离散化的好处是不仅能归类相似的特征及压缩存储空间，而且可以通过倒排技术快速检索到包含指定特征词的场景，从而避免逐帧比较.Nister等提出基于树型结构的存储和管理方式，大大地提升了检索效率。Schindler 等利用信息增益对特征进行评估，只挑选区分性好的特征进行词典构造，使方法的性能和扩展性显著提高。Cummins 等考虑词与词的相互关系，采用 Chow-Liu 树来近似描述它们间的相关性，通过利用上下文信息来减少感知歧义。离散化会降低特征的可分辨性，可能引起感知歧义。但基于词袋的表示已成功应用于不同场合下的环形闭合检测，取得了非常好的实验效果。尤其是FAB-Map，代表了视觉环形闭合检测当前发展的高水准.
+* 3.基于场景地图的表示。对创建度量地图(metric map)的 SLAM 方法而言，通过以上方法进行环形闭合检测均需要额外的存储空间，如保存特征、词袋以及词典等。另一种思路是直接利用创建的度量地图，减少不必要的存储开销.Williams 等提出通过建立当前帧特征与地图特征之间的对应关系来求解摄像机可能的位姿，即利用重定位来进行环形闭合检测。为了充分利用上下文信息，还可通过构建子地图，然后采用地图与地图相匹配 的方法作检测，这种方法适用于通过子地图来构建全局地图的 SLAM 技术。
+
+#### 4.2.2 假设产生
+* 环形闭合假设产生是从规模庞大的场景中快速找出若干环形闭合的候选。根据该过程中是否依赖位姿及其不确定性的估计，可分为以下两种计算方法。
+  * 1.基于空间位置的方法。环形闭合是指机器人再次回到之前已经访问过的区域，因而判断给定的两个位姿是否处在同一场景的最为直观的方式就是计算位姿间的距离。若距离值足够小，则可能构成环形闭合。但由于累积误差的存在，在经过长时间运动后，即使机器人真实处在相同的位置，估计的位姿间也会存在较大的偏差。若能考虑运动过程中的不确定性，则可以得到一个合理的解决方案。Bosse 等提出通过Dijkstra 最短路径算法来计算位姿间的最小不确定性路径。在此基础上，Olson考虑了传感器测量范围，并通过位姿间的马氏距离判断观测信息存在重合的可能性。局限性在于，当实际误差大于估计误差时，正确的环形闭合信息将会被忽略掉。如，判定环形闭合假设的一个常用准则是落入估计值的3倍标准差内，若超出此范围则直接被忽略。
+  * 2.基于外观相似的方法。保证环形闭合检测的鲁棒性，就不能过分依赖地图创建过程中的同源信息(如机器人的姿态信息)，并提出利用视觉显著特征来判断环形闭合假设的方法。通过观测信息来判定环形闭合即是要估计观测信息来自同一场景的可能性。不同的表示使用的评价标准不同。如对采用二进制的特征描述，直接计算特征间的海明距离来衡量观测的相似性;对基于词袋的表示，常采用先进行TF-IDF(词频 – 逆向文件频率)权重计算再进行余弦相似度求解的方法;在考虑词间相互关系的情况下，为每一个地点建立概率观测模型，并利用贝叶斯框架计算不同的观测来自同一地点的概率。获得相似性度量后，通过设定阈值来选取符合条件的环形闭合假设，更为常见的方法是对相似性进行排序，然后选取前 N 项作为候选。候选数目的选定，在实验中选取前15项作为假设，获得以下结果:对 97% 的帧至少可以找到一个好的环形闭合假设，对 90% 的帧可以找到两个;对所有的帧，约 60% 的正确环形闭合都出现在前 15 个假设中。
+
+#### 4.2.3 假设验证
+* 由于环形闭合信息的至关重要性，对环形闭合假设进行验证是必要的。验证方法可分为单环形闭合假设验证与多环形闭合假设验证。
+  * 1.单环形闭合假设验证。单环形闭合假设验证的主要依据是**特征的一致性**。在给定一组可能的特征匹配的情况下，对特征作空间结构的一致性检验最为常用的方法是通过 RANSAC 以及极线约束来求解本质矩阵或相对变换。若能得到合适的本质矩阵或相对变换则表示检验通过，否则不通过.Cadena 等提出利用条件随机场匹配对特征的外观、分布等作一致性检验，并通过实验验证了方法的有效性。
+  * 2.多环形闭合假设验证。与单环形闭合假设验证方法不同，多环形闭合假设验证的主要依据是**位姿的一致性**。我们知道，对构成环形闭合的一组相对变换，理论上，它们之间的乘积等于单位矩阵。对给定的一组环形闭合假设，可利用上述性质进行检验，得到“一致性矩阵”，并依此选出最大自洽子集作为多环形闭合假设验证的输出结果。
+
+### 4.3 复杂度对比
+* 在时间上，基于特征表示的方法通常需要逐帧进行比较，其时间复杂度与数据帧呈线性关系。考虑到基于局部特征的方法需要建立特征间的关联， 其时间复杂度为 O(M2n)，其中 n 为帧数，M 为特征数(假定每帧图像特征数相等)。将特征离散化，并采用基于词袋的表示后，计算性能主要由聚类过程(词化)决定，时间复杂度为 O(MN)，其中 N 为 类别数，M 为特征数。在基于词袋的表示中，在词典规模固定后，计算的复杂性与帧数 n 无关. 当环境的规模较小(帧数在数千左右)时，基于特征的表示具有较高的计算效率，但对于更大的环境规模，基于词袋的表示在效率上更优。
+* 在空间上，基于度量地图的场景表示不需要额外的存储空间，其它方法需要保存相应的特征或词袋以及字典。因而，基于特征表示的空间复杂度为O(n)，基于词袋的表示为O(n + N )。为了达到最好的时间、空间效率，帧的选取以及词数的选定是关键。
