update survey of graph-based slam

--- a/slam综述/基于图优化的同时定位与地图创建综述.md
+++ b/slam综述/基于图优化的同时定位与地图创建综述.md
@@ -71,5 +71,21 @@
   * 2.多环形闭合假设验证。与单环形闭合假设验证方法不同，多环形闭合假设验证的主要依据是**位姿的一致性**。我们知道，对构成环形闭合的一组相对变换，理论上，它们之间的乘积等于单位矩阵。对给定的一组环形闭合假设，可利用上述性质进行检验，得到“一致性矩阵”，并依此选出最大自洽子集作为多环形闭合假设验证的输出结果。
 
 ### 4.3 复杂度对比
-* 在时间上，基于特征表示的方法通常需要逐帧进行比较，其时间复杂度与数据帧呈线性关系。考虑到基于局部特征的方法需要建立特征间的关联， 其时间复杂度为 O(M2n)，其中 n 为帧数，M 为特征数(假定每帧图像特征数相等)。将特征离散化，并采用基于词袋的表示后，计算性能主要由聚类过程(词化)决定，时间复杂度为 O(MN)，其中 N 为 类别数，M 为特征数。在基于词袋的表示中，在词典规模固定后，计算的复杂性与帧数 n 无关. 当环境的规模较小(帧数在数千左右)时，基于特征的表示具有较高的计算效率，但对于更大的环境规模，基于词袋的表示在效率上更优。
-* 在空间上，基于度量地图的场景表示不需要额外的存储空间，其它方法需要保存相应的特征或词袋以及字典。因而，基于特征表示的空间复杂度为O(n)，基于词袋的表示为O(n + N )。为了达到最好的时间、空间效率，帧的选取以及词数的选定是关键。
+* 在时间上，基于特征表示的方法通常需要逐帧进行比较，其时间复杂度与数据帧呈线性关系。考虑到基于局部特征的方法需要建立特征间的关联，其时间复杂度为$O(M^2n)$，其中n为帧数，M为特征数(假定每帧图像特征数相等)。将特征离散化，并采用基于词袋的表示后，计算性能主要由聚类过程(词化)决定，时间复杂度为$O(Mn)$，其中 N 为类别数，M 为特征数。在基于词袋的表示中，在词典规模固定后，计算的复杂性与帧数n无关。当环境的规模较小(帧数在数千左右)时，基于特征的表示具有较高的计算效率，但对于更大的环境规模，基于词袋的表示在效率上更优。
+* 在空间上，基于度量地图的场景表示不需要额外的存储空间，其它方法需要保存相应的特征或词袋以及字典。因而，基于特征表示的空间复杂度为$O(n)$，基于词袋的表示为$O(n+N)$。为了达到最好的时间、空间效率，帧的选取以及词数的选定是关键。
+
+## 5.图优化
+* 通过帧间配准和环形闭合检测完成图的构建后，SLAM问题可以转化为图优化问题，即根据已建立的约束关系求解最优的位姿序列。
+
+### 5.1 问题建模
+* 在基于图优化的 SLAM 中，机器人的位姿被表示为图中的节点，观测信息在经过处理后转变为机器人位姿间的约束关系，并通过连接节点间的边来表示。
+* 机器人的绝对或相对位姿可以通过 SE(2) 或SE(3) 中的 2D 或 3D 变换来表示。以 6 自由度移动机器人在 3 维环境中的地图构建为例，图的每个节点是一个 6 元组或 7 元组(取决于位姿的描述，其唯一确定机器人姿态$P_i = <x_i,y_i,z_i,\phi_i,\theta_i,\psi_i>$），边则描述了相连的两个节点$P_i$及$P_j$间相对变换的概率分布，通常由一个均值向量$T_{ij}$及相应的信息矩阵$\sum_{ij}^{-1}$（协方差矩阵的逆）来表示。基于图优化的形式化方法可以从两个视角来看，一个对应于不确定性观测的最大似然估计，另外一个则是物理系统的最小能量状态。两者最终都可以转化为非线性最小二乘问题。
+
+### 5.1.1 最大似然估计模型
+* 位姿间的约束可以看作是“虚拟的观测”，可以根据这些观测对系统内部状态(即位姿序列)作最大似然估计。用$ P = {P_i} $表示机器人位姿集合，$T =\{T_{ij}\}$表示位姿间的相对变换集，则在给定观测信息 T 的条件下，对 P 作最大似然估计可描述为
+$$L(P|T) = Pr(T|P) \tag{4}$$
+$$= \prod_m Pr(T_m|P) //独立性假设 \tag{5}$$
+$$= \prod_m Pr(T_m|P_{R(m)}) //马尔可夫性 \tag{6}$$
+$$= \prod_{(i,j)\in E} Pr(T_{ij}|P_i,P_j) //符号替换 \tag{7}$$
+  其中，E表示图中所有边的集合。式(5)使用了条件独立假设，即假定给定机器人姿态信息的条件下各观测之间相互独立。式(6)应用了马尔可夫性，$P_{R(m)}$构成了$T_m$的马尔可夫邻域。由于每个约束$T_{ij}$（即每条边）只与两个位姿节点$P_i$和$P_j$相关，作简单的符号替换后，可以得到式 (7)。
+* 
